# jenlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  platformio.ini
.github/workflows/: cpplint.yml  docs.yml
components/jenlib/: CMakeLists.txt
develop/: ArduinoBleDriver_8cpp.html  ArduinoBleDriver_8cpp__incl.map  ArduinoBleDriver_8cpp__incl.md5  ArduinoBleDriver_8h.html  ArduinoBleDriver_8h__dep__incl.map  ArduinoBleDriver_8h__incl.map  ArduinoBleDriver_8h__incl.md5  ArduinoBleDriver_8h_source.html  ArduinoGpioDriver_8cpp__incl.map  ArduinoGpioDriver_8h.html  ArduinoGpioDriver_8h_source.html  ArduinoTimeDriver_8cpp.html  ArduinoTimeDriver_8h__incl.map  ArduinoTimeDriver_8h__incl.md5  BleCharacteristic_8h.html  BleCharacteristic_8h__dep__incl.md5  BleDriver_8h.html  BleDriver_8h__dep__incl.md5  BleDriver_8h__incl.map  BleDriver_8h__incl.md5  BleDriver_8h_source.html  BleService_8h__incl.md5  Ble_8h.html  BrokerStateMachine_8cpp__incl.md5  BrokerStateMachine_8h.html  BrokerStateMachine_8h__incl.map  BrokerStateMachine_8h__incl.md5  BrokerStateMachine_8h_source.html  BuildConfig_8h.html  EspIdfBleDriver_8cpp.html  EspIdfBleDriver_8cpp__incl.map  EspIdfBleDriver_8cpp__incl.md5  EspIdfBleDriver_8h.html  EspIdfBleDriver_8h__dep__incl.map  EspIdfBleDriver_8h__incl.map  EspIdfBleDriver_8h__incl.md5  EspIdfBleDriver_8h_source.html  EspIdfGpioDriver_8cpp__incl.map  EspIdfGpioDriver_8cpp__incl.md5  EspIdfGpioDriver_8h.html  (+230 more)
develop/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_2.js  all_5.js  all_6.js  all_7.js  all_c.js  all_e.js  all_f.js  classes_4.js  classes_7.js  classes_9.js  classes_b.js  enums_0.js  enums_7.js  enumvalues_2.js  enumvalues_6.js  enumvalues_7.js  enumvalues_b.js  enumvalues_c.js  enumvalues_f.js  files_0.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_b.js  functions_0.js  functions_1.js  functions_10.js  functions_3.js  functions_4.js  (+21 more)
docs/: ArduinoCallbackExample.md  Doxyfile  EventSystemImplementation.md  ble_protocol.md  integration_guide.md
docs/examples/: README.md
docs/examples/complete/: ble_sensor_example.md
docs/examples/components/: ble_example.md  event_example.md  gpio_example.md  measurement_example.md  state_example.md  time_example.md
examples/arduino/ble_sensor/: main.cpp
examples/arduino/ble_sensor_callback/: main.cpp
examples/arduino/simple_gpio/: simple_gpio.ino
examples/arduino/temperature/: temperature.ino
examples/artifacts/: measurements_batch_sample.json
examples/esp_idf/ble_sensor/: CMakeLists.txt
include/jenlib/ble/: Ble.h  BleDriver.h  GattProfile.h  Ids.h  Messages.h  Notes.md  Payload.h  PayloadBuffer.h  Protocol.h  Roles.h
include/jenlib/config/: BuildConfig.h
include/jenlib/events/: EventDispatcher.h  EventTypes.h
include/jenlib/gpio/: GPIO.h  GpioDriver.h  PinTypes.h
include/jenlib/measurement/: Measurement.h
include/jenlib/onewire/: OneWireBus.h
include/jenlib/state/: BrokerStateMachine.h  SensorStateMachine.h  StateMachine.h
include/jenlib/time/: Time.h  TimeDriver.h  TimeTypes.h
lib/jenlib/: library.json
main/: ArduinoBleDriver_8cpp.html  ArduinoBleDriver_8cpp__incl.map  ArduinoBleDriver_8cpp__incl.md5  ArduinoBleDriver_8h.html  ArduinoBleDriver_8h__dep__incl.md5  ArduinoBleDriver_8h__incl.map  ArduinoBleDriver_8h__incl.md5  ArduinoBleDriver_8h_source.html  ArduinoGpioDriver_8cpp.html  ArduinoGpioDriver_8cpp__incl.md5  ArduinoGpioDriver_8h__dep__incl.map  ArduinoGpioDriver_8h__dep__incl.md5  ArduinoGpioDriver_8h__incl.map  ArduinoGpioDriver_8h__incl.md5  ArduinoGpioDriver_8h_source.html  ArduinoOneWireBus_8cpp.html  ArduinoTimeDriver_8cpp.html  ArduinoTimeDriver_8h.html  ArduinoTimeDriver_8h_source.html  BleCharacteristic_8h__dep__incl.map  BleCharacteristic_8h__incl.map  BleCharacteristic_8h__incl.md5  BleCharacteristic_8h_source.html  BleDriver_8h.html  BleDriver_8h__dep__incl.map  BleDriver_8h__dep__incl.md5  BleDriver_8h__incl.map  BleDriver_8h__incl.md5  BleDriver_8h_source.html  BleService_8h.html  BleService_8h__dep__incl.map  BleService_8h__dep__incl.md5  BleService_8h__incl.map  BleService_8h_source.html  Ble_8h.html  Ble_8h__dep__incl.map  Ble_8h__dep__incl.md5  Ble_8h__incl.map  Ble_8h__incl.md5  Ble_8h_source.html  (+496 more)
main/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+66 more)
scripts/: build-docs.sh
smoke_tests/: BleSystemSmokeTests.cpp  ComprehensiveSmokeTest.cpp  CoreSmokeTest.cpp  DebugSmokeTest.cpp  EventSystemSmokeTests.cpp  FinalSmokeTest.cpp  IntegrationSmokeTests.cpp  PlatformMockSmokeTests.cpp  PlatformMocks.h  SimpleSmokeTest.cpp  SmokeTestMain.cpp  SmokeTestSuites.h  StateMachineSmokeTests.cpp  TimeServiceSmokeTests.cpp
src/ble/: Ids.cpp  Messages.cpp  NativeBleDriver.cpp
src/ble/drivers/: ArduinoBleCharacteristic.cpp  ArduinoBleDriver.cpp  ArduinoBleService.cpp  EspIdfBleDriver.cpp  NativeBleCharacteristic.cpp  NativeBleDriver.cpp  NativeBleService.cpp
src/events/: EventDispatcher.cpp
src/gpio/: GPIO.cpp
src/gpio/drivers/: ArduinoGpioDriver.cpp  EspIdfGpioDriver.cpp  NativeGpioDriver.cpp
src/measurement/: Measurement.cpp
src/onewire/drivers/: ArduinoOneWireBus.cpp  EspIdfOneWireBus.cpp  (+1 more)
src/state/: BrokerStateMachine.cpp  SensorStateMachine.cpp  StateMachine.cpp
src/time/: Time.cpp
tests/: AllTests.cpp  AllTests_Clean.cpp  AllTests_New.cpp  BleCallbackTests.cpp  BleIntegrationTests.cpp  BleInterfaceContractTests.cpp  BleTests.cpp  MeasurementTests.cpp  NativeDriverTests.cpp  PayloadTests.cpp  PinTests.cpp  PinTypeTests.cpp  StateMachineTests.cpp  TestRunners.cpp  TestRunners.h  TestSuites.h  TimeDriverTests.cpp  Tmp36Tests.cpp
(+16 files in other folders)
